--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Result Reader is an ads-free educational website providing latest jobs, results, admit cards, admissions, scholarships, and answer keys with accurate and updated information to help students make informed academic and career decisions.our motive is not making money by showing adds our motive is give some useful information about result admit card latest job admission answer key to help student the main thing student make our dessition abot career study we provide all information in simple way">
 
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
+<meta name="keywords" content="latest job,Result Reader,result reader,Result reader, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
@@ -167,13 +167,13 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
    
     <h3>Description</h3>
    
-<p>ResultReader is an informational website created to help students and job aspirants by providing accurate and timely updates related to jobs, results, admit cards, and answer keys. All information published on this website is collected from official websites, notifications, and trusted public sources.
+<p>Result Reader is an informational website created to help students and job aspirants by providing accurate and timely updates related to jobs, results, admit cards, and answer keys. All information published on this website is collected from official websites, notifications, and trusted public sources.
 
-ResultReader is completely ads-free and does not display any misleading, promotional, or third-party advertisements. Our primary objective is to deliver clear, reliable, and student-focused information.
+Result Reader is completely ads-free and does not display any misleading, promotional, or third-party advertisements. Our primary objective is to deliver clear, reliable, and student-focused information.
 
-While we make every effort to keep the content updated and correct, ResultReader does not guarantee complete accuracy. In case of any error, change, or discrepancy, users are advised to visit the respective official website, which should be considered the final and authentic source.
+While we make every effort to keep the content updated and correct, Result Reader does not guarantee complete accuracy. In case of any error, change, or discrepancy, users are advised to visit the respective official website, which should be considered the final and authentic source.
 
-ResultReader is for informational purposes only and is not affiliated with or representative of any government or private organization.</p>
+Result Reader is for informational purposes only and is not affiliated with or representative of any government or private organization.</p>
 
 <p>यह वेबसाइट विद्यार्थियों और अभ्यर्थियों की सहायता के उद्देश्य से बनाई गई है। यहाँ उपलब्ध सभी नौकरी, रिज़ल्ट, एडमिट कार्ड और उत्तर कुंजी से संबंधित जानकारी विभिन्न आधिकारिक स्रोतों के आधार पर प्रदान की जाती है।
 
