--- a/tools/index.html
+++ b/tools/index.html
@@ -9,7 +9,7 @@
      <meta name="description" content="DR.pdf & image is a compleate package of your need at one place free tool for pdf & image all tool are avalible here free">
 
 
-<meta name="keywords" content=" merg pdf, split pdf, pdf to image ,image to pdf,photo background remover,orgnize pdf,sign on pdf,photo date and name,page number on pdf,watermark on pdf,DR.pdf and image,pdf editoe,resume builder,multiple image,image resizer,age-calculator,image compressor,word to pdf,excel to pdf,pdf multifunction tool">
+<meta name="keywords" content="Dr.PDF & IMG,drpdf&img,dr pdf and image,DR pdf,dr pdf, merg pdf, split pdf, pdf to image ,image to pdf,photo background remover,orgnize pdf,sign on pdf,photo date and name,page number on pdf,watermark on pdf,DR.pdf and image,pdf editoe,resume builder,multiple image,image resizer,age-calculator,image compressor,word to pdf,excel to pdf,pdf multifunction tool">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online/tools/">
 <meta property="og:image" content="https://resultreader.online/tools/img/drpdf.jpeg">
