--- a/tools/test.html
+++ b/tools/test.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Background Remover with Custom BG</title>
-    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
-            /* padding: 20px; */
+            padding: 20px;
         }
         .container {
             max-width: 900px;
@@ -134,21 +133,6 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <div class="logo-area">
-                <img src="/tools/img/drpdf.jpeg" alt="Logo" class="logo-img">
-                <span class="brand-name">DR.PDF & IMG</span>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html" target="_blank">Home</a></li>
-                    <li><a href="#products">Application</a></li>
-                    <li><a href="#contact">About Us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
     <div class="container">
         <h1>Image Background Remover + Custom BG</h1>
         <div class="input-group">
