--- a/job/Railway RRB Group D Online Form/index.html
+++ b/job/Railway RRB Group D Online Form/index.html
@@ -99,6 +99,7 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
     <h3>age limit </h3>
      <ul><li>Minimum Age :  18 Years</li>
     <li>Maximum Age : 36 Years </li>
+    <a href="https://resultreader.online/tools/age-calculator.html">Age Calculator</a>
     <!-- <li></li>Candidates born not earlier than 02/01/2001 and not later than 01/01/2008 (both days inclusive)</ul> -->
       
 
@@ -140,10 +141,10 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
           <td>Apply online</td>
           <td><a href="https://www.rrbapply.gov.in/#/auth/landing" target="_blank">click here</a></td>
         </tr>
-        <!-- <tr>
+         <tr>
           <td>Download official notification</td>
-          <td><a href="https://rrbapply.gov.in/#/auth/landing" target="_blank">click here</a></td>
-        </tr> -->
+          <td><a href="https://drive.google.com/file/d/1u7PfFepu5ShIVuuWOybdofMmHEwtFMr9/view?usp=sharing" target="_blank">click here</a></td>
+        </tr>
         <!-- <tr>
           <td>check syllabus </td>
           <td><a href="https://rrbapply.gov.in/#/auth/landing">click here</a></td>
@@ -156,7 +157,14 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
 
     </div>
     <div class="grid-box">
-
+<p>For syllabus exam pattern ask AI</p>
+<table>
+  <tr>
+    <td>
+      <a href="https://agent.jotform.com/019be1e5281f75129a4c2c7ad355f32b9570">Result reader AI</a>
+    </td>
+  </tr>
+</table>
     </div>
   </section>
 
