--- a/job/Railway RRB Group D Online Form/index.html
+++ b/job/Railway RRB Group D Online Form/index.html
@@ -6,9 +6,9 @@
     <title>Railway RRB Group-D (Level-1) Recruitment 2026 start</title>
 <link rel="stylesheet" href="../job.css">
 <link rel="icon" type="image/png" href="../../logo.png">
-  <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
+  <meta name="description" content="rrb group d 2026 level 1 online form filling start last date for filling form 2 march only 10th pass cab be apply">
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
+<meta name="keywords" content="rrb groupd,rrb group d 2026 form start,rrb group d form filling date, rrb group d eliglibty, rrb group d apply link,rrb group d form filling last date,railway group d online form,group d qualification,rrb group d 2026 update,rrb group d 2026 notification,latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
 </head>
 <body>
      <header>
