--- a/job/indian-post-gds/index.html
+++ b/job/indian-post-gds/index.html
@@ -6,9 +6,9 @@
     <title></title>
 <link rel="stylesheet" href="../job.css">
 <link rel="icon" type="image/png" href="../../logo.png">
-  <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
+  <meta name="description" content="Indian Post GDS 2026 recruitment form filling start 2 febuary notification, application form, eligibility criteria, exam date, admit card and result.">
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
+<meta name="keywords" content="indian post gds,indian post gds 2026 online form,indian post gds eliglibty,indian post gds form last date,indian post gds form apply link,indian post gds 2026 form online,latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
  <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
@@ -49,7 +49,7 @@
       <table border="2px">
         <tr>
           <td>Online Apply start Date</td>
-          <td>31 january 2026</td>
+          <td>2 fabuary 2026</td>
         </tr>
         <tr>
           <td>Online Apply Last Date</td>
