--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Result reader ,latest job, Admit card, Result, Answer key</title>
+  <title>Result reader ,latest job, Admit card, Result, Answer key,admission,</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="logo.png">
   
 <meta name="description" content="Result Reader is an ads-free educational website providing latest jobs, results, admit cards, admissions, scholarships, and answer keys with accurate and updated information to help students make informed academic and career decisions.our motive is not making money by showing adds our motive is give some useful information about result admit card latest job admission answer key to help student the main thing student make our dessition abot career study we provide all information in simple way">
 
 
-<meta name="keywords" content="latest job,Result Reader,result reader,Result reader, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
+<meta name="keywords" content="rrb group d 2026 ,latest job,Result Reader,result reader,Result reader, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER,sarkari job,sarkari naukari,govt job,top 2026 vacancy,">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
