--- a/tools/pagenumber.html
+++ b/tools/pagenumber.html
@@ -2,7 +2,8 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <title>PDF Page Numberer - Range & Zero Bloat</title>
+    <title>PDF Page Numberer add with Range & Zero Bloat result reader tools dr pdf and image</title>
+    
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <style>
         :root { --p: #6366f1; --bg: #0f172a; }
