--- a/tools/pdf-editor.html
+++ b/tools/pdf-editor.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DR.PDF & IMGAGE pdf editor</title>
+    <title> pdf editor edit pdf add text result reader tools DR.PDF & IMGAGE</title>
+    <meta property="og:description" content="free tool for pdf & image all tool are avalible here free">
+     <meta name="description" content="DR.pdf & image is a compleate package of your need at one place free tool for pdf & image all tool are avalible here free,pdf resize, merge pdf ,split pdf,pdf to image,image to pdf,orgnize pdf,sign on pdf, watermaark on pdf,image background remover,image compressor,image resizer,age calculator,word to pdf, excel to pdf,resumr builder,multiple image in one page,edit pdf,many more pdf tools at one place">
+
+
+<meta name="keywords" content="Dr.PDF & IMG,drpdf&img,dr pdf and image,DR pdf,dr pdf, merg pdf, split pdf, pdf to image ,image to pdf,photo background remover,orgnize pdf,sign on pdf,photo date and name,page number on pdf,watermark on pdf,DR.pdf and image,pdf editoe,resume builder,multiple image,image resizer,age-calculator,image compressor,word to pdf,excel to pdf,pdf multifunction tool">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
