--- a/job/Railway RRB Group D Online Form/index.html
+++ b/job/Railway RRB Group D Online Form/index.html
@@ -9,6 +9,15 @@
   <meta name="description" content="rrb group d 2026 level 1 online form filling start last date for filling form 2 march only 10th pass cab be apply">
 
 <meta name="keywords" content="rrb groupd,rrb group d 2026 form start,rrb group d form filling date, rrb group d eliglibty, rrb group d apply link,rrb group d form filling last date,railway group d online form,group d qualification,rrb group d 2026 update,rrb group d 2026 notification,latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMSK5YG2XZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMSK5YG2XZ');
+</script>
 </head>
 <body>
      <header>
