--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     ]
   }
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMSK5YG2XZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMSK5YG2XZ');
+</script>
 
 </head>
 <body>
