--- a/latest-job.html
+++ b/latest-job.html
@@ -24,7 +24,15 @@
 <meta property="og:type" content="website">
 <meta name="robots" content="index, follow">
 <meta name="author" content="Result Reader">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMSK5YG2XZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-EMSK5YG2XZ');
+</script>
 </head>
 <body>
 
