--- a/tools/index.html
+++ b/tools/index.html
@@ -17,6 +17,15 @@
 <link rel="canonical" href="https://resultreader.online/tools/">
 <link rel="stylesheet" href="/tools/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMSK5YG2XZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMSK5YG2XZ');
+</script>
 </head>
      
     
