--- a/index.html
+++ b/index.html
@@ -168,6 +168,21 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
 </ul>
 <button style="color: rgb(247, 246, 246); background-color: #3117d9; size: 25px; margin-top: 5px; border-radius: 12px;"><a href="Admission.html" target="_blank" style="color: aqua; font-size: 20px; font-weight: 500px; text-decoration: none; justify-self: end; margin-top: 5px;">view more</a></button>
       </div>
+      <!-- add ke liye -->
+      <div class="card">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8974795783881105"
+     crossorigin="anonymous"></script>
+<!-- frist -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8974795783881105"
+     data-ad-slot="8742638521"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+      </div>
       
    
   </section>
