--- a/latest-job.html
+++ b/latest-job.html
@@ -100,6 +100,20 @@ Our aim is to help job seekers stay informed and apply on time with clear, easy-
 
 
       </div>
+      <div class="card">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8974795783881105"
+     crossorigin="anonymous"></script>
+<!-- frist -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8974795783881105"
+     data-ad-slot="8742638521"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+      </div>
       </section>
 
       <section style="color: black; font-size: 20px; font-weight: 500px; background-color: green;text-align: center;" id="contact">
