--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 id="job">Latest job</h2>
         <ul>
           <li><a href="/job/Railway RRB Group D Online Form/" target="_blank">Railway RRB Group D Online Form 2026 start</a></li>
-          <li><a href="/job/indian-post-gds/" target="_blank">Indian post GDS 2026 start-soon</a></li>
+          <li><a href="/job/indian-post-gds/" target="_blank">Indian post GDS 2026 online apply start</a></li>
           <li><a href="/job/csir-cdri/" target="_blank">csir-cdri recruitment 2026 </a></li>
            <li><a href="/job/up police computer oprator/" target="_blank">UP Police Computer Operator Grade-A Correction Form 2026</a></li>
            <li><a href="/job/RBI Bank Office Attendant Online Form/" target="_blank">RBI Bank Office Attendant Online Form 2026 Start</a></li>
