--- a/job/indian-post-gds/index.html
+++ b/job/indian-post-gds/index.html
@@ -171,6 +171,10 @@
           <td>Apply online</td>
           <td><a href="https://indiapost.gov.in/gdsonlineengagement" target="_blank">click here</a></td>
         </tr>
+        <tr>
+          <td>official notification</td>
+          <td><a href="https://indiapost.gov.in/gdsonlineengagement/pdf/descriptive-notification.pdf" target="_blank">click here</a></td>
+        </tr>
         
           <td>official link</td>
           <td><a href="https://indiapostgdsonline.gov.in/" target="_blank">click here</a></td>
