--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <div class="card">
         <h2 id="job">Latest job</h2>
         <ul>
+          <li><a href="/job/bihar police bpssc recuritment 2026/" target="_blank">Bihar police BPSSC recuritment 2026 online start</a></li>
           <li><a href="/job/Railway RRB Group D Online Form/" target="_blank">Railway RRB Group D Online Form 2026 start</a></li>
           <li><a href="/job/indian-post-gds/" target="_blank">Indian post GDS 2026 online apply start</a></li>
           <li><a href="/job/csir-cdri/" target="_blank">csir-cdri recruitment 2026 </a></li>
