--- a/job/bihar police bpssc recuritment 2026/index.html
+++ b/job/bihar police bpssc recuritment 2026/index.html
@@ -117,6 +117,16 @@ Through this recruitment process, selected candidates will be appointed as ASI (
 
     </div>
     <div class="grid-box">
+      <h3>Age limit</h3>
+      <ul>
+        <li>Minimum age: 21 year</li>
+        <li>Maximum age: 37 year</li>
+        <li>For female candidates maximum age:40 year</li>
+        <li>For SC/ST Male and Female Maximum age: 42 year</li>
+        <li><a href="/tools/age-calculator.html" target="_blank">Age Calculator</a></li>
+      </ul>
+    </div>
+    <div class="grid-box">
       <h3>physical standard test</h3>
       <p>for male candidates</p>
       <table border 1px>
@@ -162,7 +172,7 @@ Through this recruitment process, selected candidates will be appointed as ASI (
 </table>
          
     </div>
-    <div class="grid-box">
+    <div class="grid-box" style="padding: 0%;font-size: 12px;word-wrap: break-word;">
       <h3>Physical Efficiency Test</h3>
       <table>
         <tr>
@@ -226,6 +236,16 @@ Through this recruitment process, selected candidates will be appointed as ASI (
         </tr>
       </table>
 
+    </div>
+     <div class="grid-box">
+<p>For syllabus exam pattern ask AI</p>
+<table>
+  <tr>
+    <td>
+      <a href="https://agent.jotform.com/019be1e5281f75129a4c2c7ad355f32b9570">Result reader AI</a>
+    </td>
+  </tr>
+</table>
     </div>
   </section>
 
