--- a/job/bihar police bpssc recuritment 2026/index.html
+++ b/job/bihar police bpssc recuritment 2026/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bihar police bpssc recruitment 2026 online start</title>
+    <title>Bihar police ASI bpssc recruitment 2026 online start</title>
 <link rel="stylesheet" href="../job.css">
 <link rel="icon" type="image/png" href="../../logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
@@ -215,12 +215,40 @@ Through this recruitment process, selected candidates will be appointed as ASI (
       </ul>
 
     </div>
+    <div class="grid-box" style="color: black;text-align: start;">
+      <h3>require Document</h3>
+      <ol>
+        <li>Adhar card</li>
+        <li>photo</li>
+        <li>signature</li>
+        <li>Graduation certificate</li>
+        <li>category certificate</li>
+        <li>birth certificate or 10th,12th marksheet</li>
+        <p>read official notification before apply</p>
+        <a href="/tools/index.html">Important tools</a>
+      </ol>
+
+
+    </div>
+    <div class="grid-box">
+      <h3>how to apply online</h3>
+      <ul>
+        <li>click apply link below</li>
+        <li>register using mobile no and enail id</li>
+        <li>make payment</li>
+        <li>fill form and upload document</li>
+        
+        <li>Download application form after form filled</li>
+
+      </ul>
+      <p>Agar aapko apply karne me koi problem aa rahi hai to niche step by step video hai jise dekh kar aap apply kar sakte hai </p>
+    </div>
     <div class="grid-box">
       <h3>importent links</h3>
       <table border="3px">
         <tr>
           <td>Apply online link</td>
-          <td><a href="">click here</a></td>
+          <td><a href="https://apply-bpssc.com/bpssc_asi_op_4_26_v1/applicationIndex">click here</a></td>
         </tr>
         <tr>
           <td>Download official notification</td>
@@ -236,6 +264,12 @@ Through this recruitment process, selected candidates will be appointed as ASI (
         </tr>
       </table>
 
+    </div>
+    <div class="grid-box" style="padding: 0px;">
+      <h3>How to apply video</h3>
+      <iframe src="https://www.youtube.com/embed/-0DgSnlowcs"
+        allowfullscreen style="width: 100%;height: 100%;"></iframe>
+      </iframe>
     </div>
      <div class="grid-box">
 <p>For syllabus exam pattern ask AI</p>
