--- a/job/indian-post-gds/index.html
+++ b/job/indian-post-gds/index.html
@@ -142,7 +142,7 @@
         <td>28000</td></tr>
         <tr>
           <td>chek circle wis vacancy</td>
-          <td><a href="https://drive.google.com/file/d/18a1_7dcskSpwSnQ3I0PJEhLnVhKVPIVJ/view?usp=sharing">click here</a></td>
+          <td><a href="https://files.catbox.moe/ci1ryc.jpg">click here</a></td>
         </tr>
         
       </table>
