--- a/job/bihar police bpssc recuritment 2026/index.html
+++ b/job/bihar police bpssc recuritment 2026/index.html
@@ -16,7 +16,7 @@
      
     <img src="../../logo.png" alt="logo">
     <h1>Result reader</h1>
-    <h2>A way to your sucess</h2>
+    <h2>resultreader.online</h2>
    
   </header>
 
@@ -265,12 +265,12 @@ Through this recruitment process, selected candidates will be appointed as ASI (
       </table>
 
     </div>
-    <div class="grid-box" style="padding: 0px;">
+     <div class="grid-box" style="padding: 0px;">
       <h3>How to apply video</h3>
       <iframe src="https://www.youtube.com/embed/-0DgSnlowcs"
-        allowfullscreen style="width: 100%;height: 100%;"></iframe>
+        allowfullscreen style="width: 100%;height: auto;"></iframe>
       </iframe>
-    </div>
+    </div> 
      <div class="grid-box">
 <p>For syllabus exam pattern ask AI</p>
 <table>
