--- a/job/indian-post-gds/index.html
+++ b/job/indian-post-gds/index.html
@@ -161,6 +161,16 @@
       </ul>
 
     </div>
+    <div class="grid-box">
+      <h3>important document</h3>
+      <ol>
+        <li>10th marksheet</li>
+        <li>Adhar card</li>
+        <li>photo & signature</li>
+        <li>mobile number & Email id</li>
+      </ol>
+      <a href="/tools/index.html">important tools</a>
+    </div>
 
    
     
