--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       <div class="card">
         <h2 id="job">Latest job</h2>
         <ul>
+          <li><a href="/job/Bihar police csbc conatable/" target="_blank">Bihar police csbc conatable 2026 apply start</a></li>
+          <li><a href="/job/bsnl exutive senior/" target="_blank">BSNL Senior Executive Trainee 2026 apply start</a></li>
           <li><a href="/job/upsc ias ifs 2026/" target="_blank">UPSC civil services IAS/IFS pre recuritment 2026 online apply start</a></li>
           <li><a href="/job/bihar police bpssc recuritment 2026/" target="_blank">Bihar police BPSSC recuritment 2026 online start</a></li>
           <li><a href="/job/Railway RRB Group D Online Form/" target="_blank">Railway RRB Group D Online Form 2026 start</a></li>
