--- a/job/csir-cdri/index.html
+++ b/job/csir-cdri/index.html
@@ -19,6 +19,15 @@
 <meta property="og:url" content="https://resultreader.online">
 <meta property="og:image" content="https://resultreader.online/og.png">
 <meta property="og:type" content="website">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMSK5YG2XZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMSK5YG2XZ');
+</script>
 </head>
 <body>
      <header>
