--- a/latest-job.html
+++ b/latest-job.html
@@ -66,11 +66,16 @@ Our aim is to help job seekers stay informed and apply on time with clear, easy-
 
   <section>
    
-    <div class="projects" style="align-items: center; justify-content: center; display: flex;">
+    <div class="projects" style=" display: grid;grid-template-columns: repeat(1,1fr);justify-items: center;">
 
-      <div class="card" style="align-items: center; max-height: 1000px; overflow: scroll; width: 800px;">
+      <div class="card" style="align-items: center; max-height: 1000px; overflow-y: scroll;max-width: 1000px;">
         <h2 id="job">Latest job</h2>
         <ul>
+          <li><a href="/job/Bihar police csbc conatable/" target="_blank">Bihar police csbc conatable 2026 apply start</a></li>
+          <li><a href="/job/bsnl exutive senior/" target="_blank">BSNL Senior Executive Trainee 2026 apply start</a></li>
+          <li><a href="/job/upsc ias ifs 2026/" target="_blank">UPSC civil services IAS/IFS pre recuritment 2026 online apply start</a></li>
+          <li><a href="/job/bihar police bpssc recuritment 2026/" target="_blank">Bihar police BPSSC recuritment 2026 online start</a></li>
+          <li><a href="/job/Railway RRB Group D Online Form/" target="_blank">Railway RRB Group D Online Form 2026 start</a></li>
           <li><a href="/job/indian-post-gds/" target="_blank">Indian post GDS 2026 start-soon</a></li>
           <li><a href="/job/csir-cdri/" target="_blank">csir-cdri recruitment 2026 </a></li>
            <li><a href="/job/up police computer oprator/" target="_blank">UP Police Computer Operator Grade-A Correction Form 2026</a></li>
@@ -100,7 +105,7 @@ Our aim is to help job seekers stay informed and apply on time with clear, easy-
 
 
       </div>
-      <div class="card">
+      <div class="card" style="align-items: center; max-height: 1000px; overflow-y: scroll;max-width: 800px;">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8974795783881105"
      crossorigin="anonymous"></script>
 <!-- frist -->
