--- a/index.html
+++ b/index.html
@@ -187,9 +187,18 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
       </div>
-      
+     
+
    
   </section>
+   <hr style="border:2px solid black; margin:20px 0;">
+   <div class="download">
+    <div class="dc">
+      <h2>Download videos</h2>
+    <p>You can download youtube facebook instagram video to use this tools</p>
+    <a href="download.html">video downloader</a>
+    </div>
+   </div>
    <p style="color: rgb(6, 2, 26); margin-top: 45px; padding: 15px; background-color: khaki; font-weight: 500; size: 20px;">"For any suggestions, please send us a message on WhatsApp.</p>
 
   <section class="contact">
