--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <li><a href="/job/UPSSSC Lekhpal Online Form 2026/" target="_blank">UPSSSC Lekhpal Online Form 2026 start</a></li>
             <li><a href="/job/Bihar BPSC ATPS Online Form 2026/" target="_blank">Bihar BPSC ATPS Online Form 2026 Start</a></li>
             <li><a href="/job/Bihar BSSC Inter Level Online Form/" target="_blank">Bihar BSSC Inter Level Online Form 2026 Last Date Extend</a></li>
-            <li><a href="/job/RSSB Clerk Jr-II  Junior Assistant Online Form/" target="_blank">RSSB Clerk Jr-II and Junior Assistant Online Form 2026 start </a></li>
-            <li><a href="/job/RSSB Agriculture Supervisor Online/" target="_blank">RSSB Agriculture Supervisor Online Form 2026 start</a></li>
+            <!-- <li><a href="/job/RSSB Clerk Jr-II  Junior Assistant Online Form/" target="_blank">RSSB Clerk Jr-II and Junior Assistant Online Form 2026 start </a></li>
+            <li><a href="/job/RSSB Agriculture Supervisor Online/" target="_blank">RSSB Agriculture Supervisor Online Form 2026 start</a></li> -->
             <!-- <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
@@ -123,6 +123,7 @@
          <li><a href="/result/ibpspo.html" target="_blank">IBPS PO MT XV 15 Final Result 2026</a></li>
          <li><a href="/result/ibpsso.html" target="_blank">IBPS SO XV 15th Final Result 2026 </a></li>
          <li><a href="/result/biharbtsc.html" target="_blank">Bihar BTSC Tutor Nursing Result 2026</a></li>
+         <li><a href="result search/">hamara prototype</a></li>
         
         </ul>
         <button style="color: rgb(247, 246, 246); background-color: #3117d9; size: 25px; margin-top: 5px; border-radius: 12px;"><a href="Result.html" target="_blank" style="color: aqua; font-size: 20px; font-weight: 500px; text-decoration: none; justify-self: end; margin-top: 5px;">view more</a></button>
@@ -192,13 +193,7 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
    
   </section>
    <hr style="border:2px solid black; margin:20px 0;">
-   <div class="download">
-    <div class="dc">
-      <h2>Download videos</h2>
-    <p>You can download youtube facebook instagram video to use this tools</p>
-    <a href="download.html">video downloader</a>
-    </div>
-   </div>
+   
    <p style="color: rgb(6, 2, 26); margin-top: 45px; padding: 15px; background-color: khaki; font-weight: 500; size: 20px;">"For any suggestions, please send us a message on WhatsApp.</p>
 
   <section class="contact">
