--- a/latest-job.html
+++ b/latest-job.html
@@ -71,6 +71,9 @@ Our aim is to help job seekers stay informed and apply on time with clear, easy-
       <div class="card" style="align-items: center; max-height: 1000px; overflow-y: scroll;max-width: 1000px;">
         <h2 id="job">Latest job</h2>
         <ul>
+          <li><a href="/job/pusc capf ac 2026/" target="_blank">UPSC CAPF AC Online Form 2026  Start</a></li>
+          <li><a href="/job/Railway RRC WR Apprentice Recruitment 2026/" target="_blank">Railway RRC WR Apprentice Online Form 2026 (5349 Posts)  Start</a></li>
+          <li><a href="/job/DSSB LEGEL asst ae.je,aso/" target="_blank">DSSSB Legal Asst, AE, JE, ASO Online Form 2026</a></li>
           <li><a href="/job/Bihar police csbc conatable/" target="_blank">Bihar police csbc conatable 2026 apply start</a></li>
           <li><a href="/job/bsnl exutive senior/" target="_blank">BSNL Senior Executive Trainee 2026 apply start</a></li>
           <li><a href="/job/upsc ias ifs 2026/" target="_blank">UPSC civil services IAS/IFS pre recuritment 2026 online apply start</a></li>
